longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations: {}

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - longhorn.vibe.lol # change with your preferred hostname
      secretName: longhorn-tls

  rules:
    - host: longhorn.vibe.lol # change with your preferred hostname
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
